syntax = "proto3";

package system.pb;

message Peer {
    bytes peer_id = 1;
    string name = 2;
    string avatar = 3;
}

message SystemMsg {
    enum Type {
        ContactApply = 0;
        ContactApplyAck = 1;
    }

    enum State {
        IsSended = 0;
        IsAgree = 1;
        IsReject = 2;
    }

    string id = 1;
    string ack_id = 2;
    Type type = 3;
    string group_id = 4;
    Peer from_peer = 5;
    Peer to_peer = 6;
    string content = 7;
    State state = 8;
    int64 ctime = 9;
    int64 utime = 10;
}

